syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/justbrownbear/microservices_course_chat/pkg/chat_v1;chat_v1";


service ChatV1 {
	// Создание чата
	rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
	// Удаление чата
	rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
	// Отправка сообщения
	rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}


message CreateChatRequest {
	uint64 userId = 1;
	string chatName = 2;
}

message CreateChatResponse {
	uint64 id = 1;
}

message DeleteChatRequest {
	uint64 chatId = 1;
}

message SendMessageRequest {
	uint64 userId = 1;
	uint64 chatId = 2;
	string message = 3;
}
